--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  on_audio_query: ^2.6.1
+  permission_handler: ^10.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
