--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   on_audio_query: ^2.6.1
   permission_handler: ^10.2.0
+  just_audio: ^0.9.31
 dev_dependencies:
   flutter_test:
     sdk: flutter
